--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,12 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.gokadzev.musify">
 
-
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK"  />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
+    <!-- Add permissions for widget -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <!-- Queries for Android 11+ -->
     <queries>
@@ -17,11 +21,7 @@
         </intent>
     </queries>
 
-    <!-- Required to query activities that can process text, see:
-     https://developer.android.com/training/package-visibility and
-     https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
-
-    In particular, this is used by the Flutter engine in io.flutter.plugin.text.ProcessTextPlugin. -->
+    <!-- Required to query activities that can process text -->
     <queries>
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
@@ -30,34 +30,31 @@
     </queries>
 
     <application
+        android:name=".Application"
         android:label="Musify"
-        android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:enableOnBackInvokedCallback="true"
         android:extractNativeLibs="true"
+        android:requestLegacyExternalStorage="true"
         tools:replace="android:extractNativeLibs">
 
-        <!-- AudioServiceActivity -->
+        <!-- AudioServiceActivity - This is the MAIN launcher activity for audio_service -->
         <activity
-            android:name="com.ryanheise.audioservice.AudioServiceActivity"
+            android:name=".MusifyAudioServiceActivity"
             android:exported="true"
             android:launchMode="singleTop"
-            android:allowCrossUidActivitySwitchFromBelow="false"
-            android:taskAffinity=""
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
 
-            <!-- Specifies an Android theme to apply to this Activity as soon as
-                 the Android process has started. This theme is visible to the user
-                 while the Flutter UI initializes. After that, this theme continues
-                 to determine the Window background behind the Flutter UI. -->
             <meta-data
                 android:name="io.flutter.embedding.android.NormalTheme"
                 android:resource="@style/NormalTheme" />
 
-            <meta-data android:name="flutter_deeplinking_enabled" android:value="false" />
+            <meta-data 
+                android:name="flutter_deeplinking_enabled" 
+                android:value="false" />
 
             <!-- Main activity intent filter -->
             <intent-filter>
@@ -65,6 +62,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+            <!-- Deeplink for playlists -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -74,7 +72,64 @@
                     android:host="playlist"
                     android:pathPattern="/custom/.*" />
             </intent-filter>
+
+            <!-- Widget action intent filters -->
+            <intent-filter>
+                <action android:name="com.gokadzev.musify.ACTION_TOGGLE_PLAY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.gokadzev.musify.ACTION_NEXT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.gokadzev.musify.ACTION_PREV" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
+
+        <!-- Regular MainActivity - Remove launcher intent filter -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:launchMode="singleTop"
+            android:theme="@style/LaunchTheme"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
+            android:hardwareAccelerated="true"
+            android:windowSoftInputMode="adjustResize">
+            <!-- REMOVE the MAIN/LAUNCHER intent filter from here -->
+        </activity>
+<activity
+    android:name=".TestActivity"
+    android:exported="true"
+    android:launchMode="singleTop"
+    android:theme="@style/LaunchTheme">
+    <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+</activity>
+        <!-- Widget Provider -->
+        <receiver
+            android:name=".MusifyWidgetProvider"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_musify_info" />
+        </receiver>
+
+        <receiver
+            android:name=".WidgetActionReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.gokadzev.musify.ACTION_TOGGLE_PLAY" />
+                <action android:name="com.gokadzev.musify.ACTION_NEXT" />
+                <action android:name="com.gokadzev.musify.ACTION_PREV" />
+            </intent-filter>
+        </receiver>
 
         <!-- Flutter embedding meta-data -->
         <meta-data
@@ -87,25 +142,27 @@
             android:value="false" />
 
         <!-- AudioService -->
-        <service android:name="com.ryanheise.audioservice.AudioService"
+        <service 
+            android:name="com.ryanheise.audioservice.AudioService"
             android:foregroundServiceType="mediaPlayback"
-            android:exported="true"
-            tools:ignore="Instantiatable">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.media.browse.MediaBrowserService" />
             </intent-filter>
         </service>
 
         <!-- MediaButtonReceiver -->
-        <receiver android:name="com.ryanheise.audioservice.MediaButtonReceiver"
-            android:exported="true"
-            tools:ignore="Instantiatable">
+        <receiver 
+            android:name="com.ryanheise.audioservice.MediaButtonReceiver"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </receiver>
 
-        <meta-data android:name="com.google.android.gms.car.application"
-        android:resource="@xml/automotive_app_desc"/>
+        <!-- Android Auto -->
+        <meta-data 
+            android:name="com.google.android.gms.car.application"
+            android:resource="@xml/automotive_app_desc"/>
     </application>
 </manifest>
