--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   rxdart: ^0.28.0
   url_launcher: ^6.3.2
   youtube_explode_dart: ^2.5.2
+  home_widget: ^0.5.0
 
 dev_dependencies:
   flutter_test:
