--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ repository: https://github.com/gokadzev/Musify
 issue_tracker: https://github.com/gokadzev/Musify/issues
 
 publish_to: 'none'
-version: 9.6.12+145 # run update.sh after changing the version
+version: 9.6.13+145 # run update.sh after changing the version
 
 environment:
   sdk: '>=3.8.0 <4.0.0'
@@ -37,6 +37,7 @@ dependencies:
   url_launcher: ^6.3.2
   youtube_explode_dart: ^2.5.2
   home_widget: ^0.5.0
+  flutter_reorderable_list: ^1.3.1
 
 dev_dependencies:
   flutter_test:
